# rent-x

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  project.md  tsconfig.build.tsbuildinfo  tsconfig.json  userflow.md
backend/examples/: rentx.http
backend/src/: app.module.js  app.module.js.map  app.module.ts  main.js  main.js.map  main.ts
backend/src/config/: environment.validation.d.ts  environment.validation.js  environment.validation.js.map  environment.validation.ts
backend/src/health/: health.controller.d.ts  health.controller.js  health.controller.js.map  health.service.d.ts  health.service.js  health.service.js.map  health.service.ts
backend/src/integration/: posts-files.integration.spec.ts  rent-flow.integration.spec.ts
backend/src/scripts/: seed-dev.js  seed-dev.js.map  seed-dev.ts
backend/test/: http.e2e-spec.ts  setup-tests.ts
frontend/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/lib/: constants.ts
programs/: Anchor.toml  Cargo.toml
programs/rentx/: Cargo.toml
programs/rentx/src/: constants.rs  errors.rs  lib.rs
programs/rentx/src/instructions/: create_listing.rs  initialize_user.rs  mod.rs  rent_item.rs  return_item.rs  verify_user.rs
programs/rentx/src/state/: mod.rs  rental_agreement.rs  rental_listing.rs  user_profile.rs
tests/: package.json  rentx.ts  tsconfig.json
(+270 files in other folders)
