[package]
name = "rentx"
version = "0.1.0"
description = "RentX - Decentralized rental platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rentx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Disables platform-authority check in tests (anchor test uses its own wallet)
test-mode = []

[dependencies]
anchor-lang = "0.32.0"

[dev-dependencies]
